# python-ddd

./: .env  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
application/driver/: driver_schema.py
application/driver/use_case/: create_driver.py  delete_driver.py  get_all_drivers.py  get_driver_by_id.py  update_driver.py
application/vehicle/: vehicle_schema.py
application/vehicle/use-case/: create_vehicle.py  delete_vehicle.py  get_all_vehicles.py  get_vehicle_by_id.py  update_vehicle.py
domain/driver/: entity.py  exception.py  interface.py
domain/vehicle/: entity.py  exception.py  interface.py
infrastructure/config/: config.py
infrastructure/database/: db.py
infrastructure/database/modeling/: up.sql
infrastructure/database/seed/: seed.sql
infrastructure/http/fastapi/: main.py
infrastructure/http/fastapi/driver/: controller.py
infrastructure/repository/orm/sqlalchemy/: model.py  repository.py
test/: tests_booking_aggregate.py  tests_booking_manager.py
