[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["guilherme-moura95 <junior.moura19@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
